add edit and update actions for room model

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,62 +1,5 @@
 <h1>Novo Quarto - <%= @inn.brand_name %></h1>
 
-<% if @room.errors.any? %>
-  <% @room.errors.full_messages.each do |msg| %>
-    <p><%= msg %></p>
-  <% end %>
-<% end %>
+<%= render 'errors' %>
 
-<%= form_with model: [@inn, @room] do |f| %>
-  <section id="room-informations">
-    <div id="room-name">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-    </div>
-    <div id="room-description">
-      <%= f.label :description %>
-      <%= f.text_area :description %>
-    </div>
-    <div id="room-area">
-      <%= f.label :area %>
-      <%= f.number_field :area %>
-    </div>
-    <div id="room-capacity">
-      <%= f.label :max_capacity %>
-      <%= f.number_field :max_capacity %>
-    </div>
-    <div id="room-rent-price">
-      <%= f.label :rent_price %>
-      <%= f.number_field :rent_price %>
-    </div>
-  </section>
-
-  <section id="room-ammenities">
-    <h2>Comodidades do Quarto</h2>
-    <p>Marque apenas as comodidades que seu quarto oferece aos hóspedes</p>
-    <%= f.check_box :has_bathroom, {}, true, false %>
-    <%= f.label :has_bathroom %> <br>
-    <%= f.check_box :has_balcony, {}, true, false %>
-    <%= f.label :has_balcony %> <br>
-    <%= f.check_box :has_air_conditioner, {}, true, false %>
-    <%= f.label :has_air_conditioner %> <br>
-    <%= f.check_box :has_tv, {}, true, false %>
-    <%= f.label :has_tv %> <br>
-    <%= f.check_box :has_wardrobe, {}, true, false %>
-    <%= f.label :has_wardrobe %> <br>
-    <%= f.check_box :has_vault, {}, true, false %>
-    <%= f.label :has_vault %> <br>
-    <%= f.check_box :is_accessible, {}, true, false %>
-    <%= f.label :is_accessible %> <br>
-  </section>
-
-  <section id="room-status">
-    <h2>Disponibilidade do Quarto</h2>
-    <p>Marque a opção abaixo para seu quarto aparecer em buscas e receber reservas.</p>
-    <p>Caso o quarto esteja indisponível, ele não aparecerá em buscas e não receberá reservas.</p>
-
-    <%= f.check_box :status, {}, :active, :inactive %>
-    <%= f.label :status %>
-  </section>
-
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
