--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,15 +1,17 @@
+<%= link_to "Voltar para #{@inn.brand_name}", inn_path(@inn) %> <br>
+
 <h1><%= "Quarto #{@room.name}" %></h1>
-<%= link_to "Voltar para #{@inn.brand_name}", inn_path(@inn) %>
 
 <% if user_signed_in? && @inn.user == current_user %>
   <%= @room.active? ? "Quarto disponível para reservas" : "Quarto indisponível para reservas" %> <br>
-  <%= link_to 'Editar Quarto', edit_inn_room_path(@inn, @room) %>
+  <%= link_to 'Editar Quarto', edit_inn_room_path(@inn, @room) %> <br>
+  <%= link_to 'Adicionar Preço de Temporada', new_inn_room_seasonal_rate_path(@inn, @room) %>
 <% end %>
 
 <section id="room-info">
-  <p><%= @room.description %></p>
-
   <h2>Sobre o Quarto</h2>
+  
+  <p><%= @room.description %></p>
   <dl>
     <dt>Área:</dt>
     <dd><%= "#{@room.area} m²" %></dd>
@@ -30,5 +32,20 @@
     <dd><%= I18n.t("amenities.has_wardrobe.#{@room.has_wardrobe?}") %></dd>
     <dd><%= I18n.t("amenities.has_vault.#{@room.has_vault?}") %></dd>
     <dd><%= I18n.t("amenities.is_accessible.#{@room.is_accessible?}") %></dd>
+  </dl>
+</section>
+
+<section id="room-seasonal-prices">
+  <h2>Preços Diferenciados para <%= @room.name %></h2>
+  <dl>
+    <% if @room.seasonal_rates.any? %>
+      <% @room.seasonal_rates.each do |rate| %>
+        <dd>
+          <%= "Entre #{I18n.localize rate.start_date.to_date} e #{I18n.localize rate.end_date.to_date}: #{number_to_currency rate.price}" %>
+        </dd>
+      <% end %>
+    <% else %>
+      <dd>Não existem preços de temporada para este quarto.</dd>
+    <% end %>
   </dl>
 </section>
