add prevention for period overlapping in pricing
also add edit and update actions for seasonal
rates

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div id="room-rent-price">
       <%= f.label :rent_price %>
-      <%= f.number_field :rent_price %>
+      <%= f.number_field :rent_price, step: 0.01 %>
     </div>
   </section>
 
