--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,7 +5,8 @@
 <% if user_signed_in? && @inn.user == current_user %>
   <%= @room.active? ? "Quarto disponível para reservas" : "Quarto indisponível para reservas" %> <br>
   <%= link_to 'Editar Quarto', edit_inn_room_path(@inn, @room) %> <br>
-  <%= link_to 'Adicionar Preço de Temporada', new_inn_room_seasonal_rate_path(@inn, @room) %>
+  <%= link_to 'Adicionar Preço de Temporada', new_inn_room_seasonal_rate_path(@inn, @room) %> <br>
+  <%= link_to 'Ver meus Preços de Temporada para este quarto', inn_room_seasonal_rates_path(@inn, @room) %>
 <% end %>
 
 <section id="room-info">
