--- a/app/views/seasonal_rates/new.html.erb
+++ b/app/views/seasonal_rates/new.html.erb
@@ -1,24 +1,5 @@
 <h2>Criar novo Preço de Temporada para <%= @room.name %></h2>
 
-<% if @seasonal_rate.errors.any? %>
-  <% @seasonal_rate.errors.full_messages.each do |msg| %>
-    <p><%= msg %></p>
-  <% end %>
-<% end %>
+<%= render 'errors' %>
 
-<%= form_with model: [@inn, @room, @seasonal_rate] do |f| %>
-  <div id="seasonal-start-date">
-    <%= f.label :start_date %>
-    <%= f.date_field :start_date %>
-  </div>
-  <div id="seasonal-end-date">
-    <%= f.label :end_date %>
-    <%= f.date_field :end_date %>
-  </div>
-  <div id="seasonal-price">
-    <%= f.label :price %>
-    <%= f.date_field :price %>
-  </div>
-
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
