--- a/app/views/inns/show.html.erb
+++ b/app/views/inns/show.html.erb
@@ -1,74 +1,67 @@
-<h1><%= @inn.brand_name %></h1>
+<h2 class="inn-name"><%= "Pousada #{@inn.brand_name}" %></h1>
 
 <% if user_signed_in? && @inn.user == current_user %>
-  <h3>Área do Proprietário</h3>
   <section id="owner-options">
-    <%= link_to 'Editar Pousada', edit_inn_path(@inn.id) %> <br>
-    <%= link_to 'Adicionar Quarto', create_new_room_path %>
+    <h3 class="section-title">Área do Proprietário</h3>
     <div id="inn-status">
       <% if @inn.active? %>
-        <p>Pousada Disponível</p> 
-        <%= button_to 'Marcar como Indisponível', inactive_inn_path(@inn) %>
+        <p class="status-active">Pousada Disponível</p> 
+        <%= button_to 'Marcar como Indisponível', inactive_inn_path(@inn), class: 'btn-to page-btn' %>
       <% else %>
-        <p>Pousada Indisponível</p>
-        <%= button_to 'Marcar como Disponível', active_inn_path(@inn) %>
+        <p class="status-inactive">Pousada Indisponível</p>
+        <%= button_to 'Marcar como Disponível', active_inn_path(@inn), class: 'btn-to page-btn' %>
       <% end %>
     </div>
+    <%= link_to 'Editar Pousada', edit_inn_path(@inn.id), class: 'page-btn' %> <br>
+    <%= link_to 'Adicionar Quarto', create_new_room_path, class: 'page-btn' %>
   </section>
 <% end %>
 
-<section id="inn-information">
-  <h3>Sobre <%= @inn.brand_name %></h3>
-  <div>
-    <%= @inn.description %>
-  </div>
-  <dl>
-    <div>
-      <dt>Horário de check-in:</dt>
-      <dd><%= @inn.checkin_time.to_fs(:time)%></dd>
-    </div>
-    <div>
-      <dt>Horário de check-out:</dt>
-      <dd><%= @inn.checkout_time.to_fs(:time)%></dd>
-    </div>
-    <div>
-      <dt>Telefone para contato:</dt>
-      <dd><%= @inn.phone_number %></dd>
-    </div>
-  </dl>
-</section>
 
-<section id="inn-policies">
-  <h3>Políticas de <%= @inn.brand_name %></h3>
-  <% if (@inn.description.nil? || @inn.description.empty?) && @inn.pet_friendly.nil? && (@inn.policy.nil? || @inn.policy.empty?) %>
-    <p>Ainda não foram informadas as políticas desse local.</p>
-  <% else %>
+<div id="inn-data">
+  <section id="inn-information">
+    <h3 class="section-title">Sobre a pousada</h3>
     <div>
       <%= @inn.description %>
     </div>
     <dl>
-      <% unless @inn.pet_friendly.nil? %>
-        <div>
+      <dt>Horário de check-in:</dt>
+      <dd><%= @inn.checkin_time.to_fs(:time)%></dd>
+      <dt>Horário de check-out:</dt>
+      <dd><%= @inn.checkout_time.to_fs(:time)%></dd>
+      <dt>Telefone para contato:</dt>
+      <dd><%= @inn.phone_number %></dd>
+    </dl>
+  </section>
+
+  <section id="inn-policies">
+    <h3 class="section-title">Políticas da pousada</h3>
+    <% if (@inn.description.nil? || @inn.description.empty?) && @inn.pet_friendly.nil? && (@inn.policy.nil? || @inn.policy.empty?) %>
+      <p>Ainda não foram informadas as políticas desse local.</p>
+    <% else %>
+      <div>
+        <%= @inn.description %>
+      </div>
+      <dl>
+        <% unless @inn.pet_friendly.nil? %>
           <dt>Animais de estimação:</dt>
           <% if @inn.pet_friendly? %>
             <dd>Aceita animais de estimação</dd>
           <% else %>
             <dd>Não aceita animais de estimação</dd>
           <% end %>
-        </div>
-      <% end %>
-      <% unless @inn.policy.nil? || @inn.policy.empty? %>
-        <div>
+        <% end %>
+        <% unless @inn.policy.nil? || @inn.policy.empty? %>
           <dt>Informações adicionais:</dt>
           <dd><%= @inn.policy %></dd>
-        </div>
-      <% end %>
-    </dl>
-  <% end %>
-</section>
+        <% end %>
+      </dl>
+    <% end %>
+  </section>
+</div>
 
 <section id="inn-address">
-  <h3>Endereço</h3>
+  <h3 class="section-title">Endereço</h3>
   <div>
     <p><%= "#{@inn.address.street_name}, #{@inn.address.number}" %></p>
     <p><%= @inn.address.formatted_neighborhood_city_state %></p>
@@ -77,14 +70,12 @@
 </section>
 
 <section id="available-rooms">
-  <h2>Quartos disponíveis</h2>
-  <dl>
+  <h3 class="section-title">Quartos disponíveis</h2>
     <% if @inn.rooms.active.any? %>
       <% @inn.rooms.active.each do |room| %>
-        <dd><%= link_to room.name, [@inn, room] %></dd>
+        <h3 class='section-title'><%= link_to room.name, [@inn, room], class: 'clean-link' %></h3>
       <% end %>
     <% else %>
-      <dd>A pousada não possui quartos disponíveis para consulta.</dd>
+    <p>A pousada não possui quartos disponíveis para consulta.</p>
     <% end %>
-  </dl>
 </section>
