--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Novo Quarto - <%= @inn.brand_name %></h1>
+<h2 class="section-title">Novo Quarto - <%= @inn.brand_name %></h2>
 
 <%= render 'errors' %>
 
