--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h2 class='section-title'>Pousadas disponíveis</h2>
 
 <% @inns.each do |inn| %>
-  <h3 class="section-title"><%= link_to "Pousada #{inn.brand_name}", inn, class: 'clean-link' %></h3>
+  <h3 class="section-title"><%= link_to "#{inn.brand_name}", inn, class: 'clean-link' %></h3>
 <% end %>
