--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -23,31 +23,48 @@
   </section>
 
   <section id="room-ammenities">
-    <h2>Comodidades do Quarto</h2>
+    <h3 class="section-title">Comodidades do Quarto</h3>
     <p>Marque apenas as comodidades que seu quarto oferece aos hóspedes</p>
-    <%= f.check_box :has_bathroom, {}, true, false %>
-    <%= f.label :has_bathroom %> <br>
-    <%= f.check_box :has_balcony, {}, true, false %>
-    <%= f.label :has_balcony %> <br>
-    <%= f.check_box :has_air_conditioner, {}, true, false %>
-    <%= f.label :has_air_conditioner %> <br>
-    <%= f.check_box :has_tv, {}, true, false %>
-    <%= f.label :has_tv %> <br>
-    <%= f.check_box :has_wardrobe, {}, true, false %>
-    <%= f.label :has_wardrobe %> <br>
-    <%= f.check_box :has_vault, {}, true, false %>
-    <%= f.label :has_vault %> <br>
-    <%= f.check_box :is_accessible, {}, true, false %>
-    <%= f.label :is_accessible %> <br>
+    <div class="form-boolean-checkboxes">
+      <div>
+        <%= f.check_box :has_bathroom, {}, 'true', 'false' %>
+        <%= f.label :has_bathroom %> <br>
+      </div>
+      <div>
+        <%= f.check_box :has_balcony, {}, 'true', 'false' %>
+        <%= f.label :has_balcony %> <br>
+      </div>
+      <div>
+        <%= f.check_box :has_air_conditioner, {}, 'true', 'false' %>
+        <%= f.label :has_air_conditioner %> <br>
+      </div>
+      <div>
+        <%= f.check_box :has_tv, {}, 'true', 'false' %>
+        <%= f.label :has_tv %> <br>
+      </div>
+      <div>
+        <%= f.check_box :has_wardrobe, {}, 'true', 'false' %>
+        <%= f.label :has_wardrobe %> <br>
+      </div>
+      <div>
+        <%= f.check_box :has_vault, {}, 'true', 'false' %>
+        <%= f.label :has_vault %> <br>
+      </div>
+      <div>
+        <%= f.check_box :is_accessible, {}, 'true', 'false' %>
+        <%= f.label :is_accessible %> <br>
+      </div>
+    </div>
   </section>
 
   <section id="room-status">
-    <h2>Disponibilidade do Quarto</h2>
+    <h3 class="section-title">Disponibilidade do Quarto</h3>
     <p>Marque a opção abaixo para seu quarto aparecer em buscas e receber reservas.</p>
     <p>Caso o quarto esteja indisponível, ele não aparecerá em buscas e não receberá reservas.</p>
-
-    <%= f.check_box :status, {}, :active, :inactive %>
-    <%= f.label :status %>
+    <div>
+      <%= f.check_box :status, {}, 'active', 'inactive' %>
+      <%= f.label :status %>
+    </div>
   </section>
 
   <%= f.submit %>
