add side menu with city links
display a menu with a list of cities that redirects
to a new page listing all of the inns, in alphabetical
order, within that city.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -242,3 +242,10 @@ dd {
   flex-direction: column;
   gap: 0;
 }
+
+#home-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 10rem;
+}
