--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,28 @@
-<h1 class='section-title'>Novidades em Pousadaria</h2>
-
-<section id="recent-inns">
-    <% @recent_inns.each do |inn| %>  
-      <div class="recent-inn-div">
-        <%= link_to inn, class: 'clean-link' do %>
-        <h3 class="section-title"><%= inn.brand_name %></h3>
-        <p class="section-title"><%= inn.address.city %></p>
-        <% end %>
-      </div>
+<div id="home-content">
+  <div id="city-links">
+    <% @locations.each do |location| %>
+      <%= link_to location.city, city_list_inns_path(city: "#{location.city}"), class: 'clean-link' %>
     <% end %>
-</section>
+  </div>
+  <div id="home-body">
+    <h1 class='section-title'>Novidades em Pousadaria</h2>
 
-<section id="remaining-inns">
-  <h2 class="section-title">Demais Pousadas</h2>
-  <% @inns.each do |inn| %>
-    <h3 class="section-title"><%= link_to "#{inn.brand_name}", inn, class: 'clean-link' %></h3>
-  <% end %>
-</section>
+    <section id="recent-inns">
+        <% @recent_inns.each do |inn| %>  
+          <div class="recent-inn-div">
+            <%= link_to inn, class: 'clean-link' do %>
+            <h3 class="section-title"><%= inn.brand_name %></h3>
+            <p class="section-title"><%= inn.address.city %></p>
+            <% end %>
+          </div>
+        <% end %>
+    </section>
+
+    <section id="remaining-inns">
+      <h2 class="section-title">Demais Pousadas</h2>
+      <% @inns.each do |inn| %>
+        <h3 class="section-title"><%= link_to "#{inn.brand_name}", inn, class: 'clean-link' %></h3>
+      <% end %>
+    </section>
+  </div>
+</div>
