add nav bar search feature for app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,25 @@
       <% end %>
     </header>
     <nav>
-      <% if user_signed_in? %>
-        <p><%= current_user.email %></p>
-        <% if current_user.host? %>
-          <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
+      <div id="nav-search">
+        <%= form_with url: search_inns_path, method: :get do |f| %>
+          <%= f.label :query, 'Procurar Pousada' %>
+          <%= f.text_field :query %>
+          <%= f.submit 'Buscar Pousada' %>
         <% end %>
-        <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button' %>
-      <% else %>
-        <%= link_to 'Seja um Pousadeiro', new_user_registration_path, class: 'nav-button' %>
-        <%= link_to 'Entrar', new_user_session_path, class: 'nav-button' %>
-      <% end %>
+      </div>
+      <div id="nav-links">
+        <% if user_signed_in? %>
+          <p><%= current_user.email %></p>
+          <% if current_user.host? %>
+            <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
+          <% end %>
+          <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button' %>
+        <% else %>
+          <%= link_to 'Seja um Pousadeiro', new_user_registration_path, class: 'nav-button' %>
+          <%= link_to 'Entrar', new_user_session_path, class: 'nav-button' %>
+        <% end %>
+      </div>
     </nav>
 
       <div id="flash-msgs">
