--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -89,7 +89,7 @@ nav {
   border-bottom: 1px dotted #000;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;
   padding: 0.5rem 1rem;
@@ -249,3 +249,4 @@ dd {
   justify-content: space-evenly;
   gap: 10rem;
 }
+
