hide the seasonal rates for visitors in room page

--- a/app/views/inns/search.html.erb
+++ b/app/views/inns/search.html.erb
@@ -7,7 +7,7 @@
   </p>
   <div id="search-results">
     <% @inns.order(:brand_name).each do |inn| %>
-      <%= link_to inn.brand_name, inn, class: 'clean-link' %>
+      <h3 class="section-title"><%= link_to inn.brand_name, inn, class: 'clean-link' %></h3>
     <% end %>
   </div>
 <% else %>
