--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -46,17 +46,19 @@
   </section>
 </div>
 
-<section id="room-seasonal-prices">
-  <h3 class="section-title">Preços Diferenciados para <%= @room.name %></h3>
-  <dl>
-    <% if @room.seasonal_rates.any? %>
-      <% @room.seasonal_rates.each do |rate| %>
-        <dd>
-          <%= "Entre #{I18n.localize rate.start_date.to_date} e #{I18n.localize rate.end_date.to_date}: #{number_to_currency rate.price}" %>
-        </dd>
+<% if user_signed_in? && @inn.user == current_user %>
+  <section id="room-seasonal-prices">
+    <h3 class="section-title">Preços Diferenciados para <%= @room.name %></h3>
+    <dl>
+      <% if @room.seasonal_rates.any? %>
+        <% @room.seasonal_rates.each do |rate| %>
+          <dd>
+            <%= "Entre #{I18n.localize rate.start_date.to_date} e #{I18n.localize rate.end_date.to_date}: #{number_to_currency rate.price}" %>
+          </dd>
+        <% end %>
+      <% else %>
+        <dd>Não existem preços de temporada para este quarto.</dd>
       <% end %>
-    <% else %>
-      <dd>Não existem preços de temporada para este quarto.</dd>
-    <% end %>
-  </dl>
-</section>
+    </dl>
+  </section>
+<% end %>
