--- a/app/views/inns/city_list.html.erb
+++ b/app/views/inns/city_list.html.erb
@@ -1,3 +1,5 @@
-<% @inns.each do |inn| %>
-  <%= link_to inn.brand_name, inn_path(inn), class: 'clean-link' %> <br>
-<% end %>
+<div id="inn-cities-view">
+  <% @inns.each do |inn| %>
+    <%= link_to inn.brand_name, inn_path(inn), class: 'clean-link' %> <br>
+  <% end %>
+</div>
