--- a/app/views/inns/new.html.erb
+++ b/app/views/inns/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Cadastrar Pousada</h1>
+<div id="form-page-view">
+  <h1>Cadastrar Pousada</h1>
 
-<%= render 'errors' %>
+  <%= render 'errors' %>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
