--- a/app/views/inns/search.html.erb
+++ b/app/views/inns/search.html.erb
@@ -1,15 +1,17 @@
-<h2 id="section-title">Resultados de pesquisa por <%= @query %></h2>
+<div id="inn-search-view">
+  <h2 id="section-title">Resultados de pesquisa por <%= @query %></h2>
 
-<% if @inns.any? %>
-  <p>
-    <%= @inns.count %>
-    <%= (Inn.model_name.human count: @inns.count).downcase %>
-  </p>
-  <div id="search-results">
-    <% @inns.order(:brand_name).each do |inn| %>
-      <h3 class="section-title"><%= link_to inn.brand_name, inn, class: 'clean-link' %></h3>
-    <% end %>
-  </div>
-<% else %>
-  <p>Não foram encontrados resultados para <%= @query %>.</p>
-<% end %>
+  <% if @inns.any? %>
+    <p>
+      <%= @inns.count %>
+      <%= (Inn.model_name.human count: @inns.count).downcase %>
+    </p>
+    <div id="search-results">
+      <% @inns.order(:brand_name).each do |inn| %>
+        <h3 class="section-title"><%= link_to inn.brand_name, inn, class: 'clean-link' %></h3>
+      <% end %>
+    </div>
+  <% else %>
+    <p>Não foram encontrados resultados para <%= @query %>.</p>
+  <% end %>
+</div>
