--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
       </div>
       <div id="nav-links">
         <% if user_signed_in? %>
-          <p><%= current_user.email %></p>
+          <%= current_user.email %>
           <% if current_user.host? %>
             <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
           <% end %>
-          <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button' %>
+          <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button btn-to' %>
         <% else %>
           <%= link_to 'Seja um Pousadeiro', new_user_registration_path, class: 'nav-button' %>
           <%= link_to 'Entrar', new_user_session_path, class: 'nav-button' %>
