--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,5 +1,7 @@
-<h2 class="section-title">Editar <%= @room.name %></h2>
+<div id="form-page-view">
+  <h2 class="section-title">Editar <%= @room.name %></h2>
 
-<%= render 'errors' %>
+  <%= render 'errors' %>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
