--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,18 +1,20 @@
-<h2 class="section-title">Quartos de <%= @inn.brand_name %></h2>
+<div id="room-index-view">
+  <h2 class="section-title">Quartos de <%= @inn.brand_name %></h2>
 
-<section id="rooms-list">
-  <% if @rooms.empty? %>
-    <p>Não existem quartos registrados nesta pousada.</p>
-  <% else %>
-    <% @rooms.each do |room| %>
-      <div class="rooms-list-item">
-        <h3><%= link_to room.name, [@inn, room], class: 'clean-link' %></h3>
-        <% if room.active? %>
-        <p class="status-active">Disponível</p>
-        <% else %>
-          <p class="status-inactive">Indisponível</p>
-        <% end %>
-      </div>
+  <section id="rooms-list">
+    <% if @rooms.empty? %>
+      <p>Não existem quartos registrados nesta pousada.</p>
+    <% else %>
+      <% @rooms.each do |room| %>
+        <div class="rooms-list-item">
+          <h3><%= link_to room.name, [@inn, room], class: 'clean-link' %></h3>
+          <% if room.active? %>
+          <p class="status-active">Disponível</p>
+          <% else %>
+            <p class="status-inactive">Indisponível</p>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
-</section>
+  </section>
+</div>
