--- a/app/views/seasonal_rates/new.html.erb
+++ b/app/views/seasonal_rates/new.html.erb
@@ -1,5 +1,7 @@
-<h2>Criar novo Preço de Temporada para <%= @room.name %></h2>
+<div id="form-page-view">
+  <h2>Criar novo Preço de Temporada para <%= @room.name %></h2>
 
-<%= render 'errors' %>
+  <%= render 'errors' %>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
