add room disponibility feature

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,10 +11,10 @@
     <section id="recent-inns">
         <% @recent_inns.each do |inn| %>  
           <div class="recent-inn-div">
-            <%= link_to inn, class: 'clean-link' do %>
-            <h3 class="section-title"><%= inn.brand_name %></h3>
-            <p class="section-title"><%= inn.address.city %></p>
-            <% end %>
+            <h3 class="section-title">
+              <%= link_to inn.brand_name, inn, class: 'clean-link' %>
+            </h3>
+            <h4 class="section-title"><%= inn.address.city %></h4>
           </div>
         <% end %>
     </section>
@@ -22,7 +22,7 @@
     <section id="remaining-inns">
       <h2 class="section-title">Demais Pousadas</h2>
       <% @inns.each do |inn| %>
-        <h3 class="section-title"><%= link_to "#{inn.brand_name}", inn, class: 'clean-link' %></h3>
+        <h3 class="section-title"><%= link_to inn.brand_name, inn, class: 'clean-link' %></h3>
       <% end %>
     </section>
   </div>
