--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,7 +1,12 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render "customers/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
 
   <div class="field">
     <%= f.label :first_name %><br />
@@ -19,11 +24,6 @@
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -36,21 +36,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <br>
-
-  <div class="host">
-    <%= f.label 'Você deseja alugar ou anunciar uma pousada?' %> <br>
-    <%= f.radio_button :role, :host %>
-    <%= f.label :role, 'Anunciar Pousada', value: 'host' %> <br>
-    <%= f.radio_button :role, :regular %>
-    <%= f.label :role, 'Alugar Pousadas', value: 'regular' %> <br>
-  </div>
-
-  <br>
-
   <div class="actions">
-    <%= f.submit "Criar Conta" %>
+    <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "customers/shared/links" %>
