--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
           <% if current_user.host? %>
             <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
           <% end %>
-          <%= link_to 'Minhas Reservas', my_reservations_path, class: 'nav-button' %>
+          <% if current_user.regular? %>
+            <%= link_to 'Minhas Reservas', my_reservations_path, class: 'nav-button' %>
+          <% end %>
           <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button btn-to' %>
         <% else %>
           <%= link_to 'Seja um Pousadeiro', new_user_registration_path, class: 'nav-button' %>
