--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           <%= current_user.email %>
           <% if current_user.host? %>
             <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
+            <%= link_to 'Reservas', my_inn_reservations_path, class: 'nav-button' %>
           <% end %>
           <% if current_user.regular? %>
             <%= link_to 'Minhas Reservas', my_reservations_path, class: 'nav-button' %>
